# img_classification

./: .editorconfig  .gitignore  README.md  pyproject.toml  testing.py
reference/: MicroSat_2024_25_Train_on_MNIST.ipynb  losses.pkl  trained_model.pth
src/: losses.pth  main.ipynb  main.py  module.py  train_loss.pkl
