[project]
name = "img-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kornia>=0.8.0",
    "matplotlib>=3.10.0",
    "numpy~=1.26.0",
    "pillow>=11.0.0",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "tab"
exclude = ["./reference/*.ipynb"]